adds navbar and page intro

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<h3>Github Search</h3>
+<h3>Gconnect</h3>
 <div class="navbar-dark">
     <a class="nav-link" routerLink="/users" routerLinkActive="active">Users</a>
     <a class="nav-link" routerLink="/repository" routerLinkActive="active">Repositories</a>
