--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,4 +1,6 @@
-<h3>Gconnect</h3>
+<div id="fff"></div>
+<h3><span id="RD">G</span>connect</h3>
+<p>find github users and repositories</p>
 <div class="navbar-dark">
     <a class="nav-link" routerLink="/users" routerLinkActive="active">Users</a>
     <a class="nav-link" routerLink="/repository" routerLinkActive="active">Repositories</a>
