adds user and repo links

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,8 +1,16 @@
 <div id="fff"></div>
-<h3><span id="RD">G</span>connect</h3>
-<p>find github users and repositories</p>
-<div class="navbar-dark">
-    <a class="nav-link" routerLink="/users" routerLinkActive="active">Users</a>
-    <a class="nav-link" routerLink="/repository" routerLinkActive="active">Repositories</a>
+
+
+<div class="row">
+    <div class="col-md-4">
+        <h3><span id="RD">G</span>connect</h3>
+        <p>find github users and repositories</p>
+    </div>
+    <div class="col-md-4">
+        <a class="nav-link" routerLink="/users" routerLinkActive="active">Users</a>
+    </div>
+    <div class="col-md-4">
+        <a class="nav-link" routerLink="/repository" routerLinkActive="active">Repositories</a>
+    </div>
 </div>
 <router-outlet></router-outlet>
