adds class to user,repo link text

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -3,14 +3,14 @@
 
 <div class="row">
     <div class="col-md-4">
-        <h3><span id="RD">G</span>connect</h3>
+        <h3><span class="RD">G</span>connect</h3>
         <p>find github users and repositories</p>
     </div>
     <div class="col-md-4">
-        <a class="nav-link" routerLink="/users" routerLinkActive="active">Users</a>
+        <a class="nav-link" routerLink="/users" routerLinkActive="active"><span class="RD">users</span></a>
     </div>
     <div class="col-md-4">
-        <a class="nav-link" routerLink="/repository" routerLinkActive="active">Repositories</a>
+        <a class="nav-link" routerLink="/repository" routerLinkActive="active"><span class="RD">repositories</span></a>
     </div>
 </div>
 <router-outlet></router-outlet>
