--- a/src/app/search-form/search-form.component.html
+++ b/src/app/search-form/search-form.component.html
@@ -3,7 +3,7 @@
   <div class="row">
       <form (ngSubmit)="searchFor(searchForm)" #searchForm="ngForm">
           <div class="form-group">
-        <label for="name">Search</label>
+        <label for="name"></label>
         <input type="text" required class="form-control" name="find" id="name"[(ngModel)]= "searchInfo.find"  #find='ngModel'>
       </div>
       <button type="submit" class="btn btn-success btn-lg">Search</button>
