--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -12,20 +12,20 @@
           <table class="table table-striped table-light">
             <tbody>
             <tr>
-              <th scope="row">Github Username:</th>
+              <th scope="row">Username:</th>
                 <td> <a href="{{users.html_url}}" target="_blank">{{users.login}}</a></td>
 
             </tr>
             <tr>
-              <th scope="row">Repositories:</th>
+              <th scope="row">No. of Repos</th>
               <td>{{users.public_repos }}</td>
             </tr>
             <tr>
-              <th scope="row">Date created:</th>
+              <th scope="row">Created on</th>
               <td>{{users.created_at | date}}</td>
             </tr>
             <tr>
-              <th scope="row">Followers:</th>
+              <th scope="row">Followers</th>
               <td>{{users.followers}}</td>
             </tr>
             <tr>
