--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -7,12 +7,12 @@
     </div>
     <div class="row">
       <div class="col-md-7">
-        <div class="table table-striped table-bordered">
+        <div class="table">
           <h3> {{users.name}}</h3>
-          <table class="table table-striped table-light">
+          <table class="table table-light">
             <tbody>
             <tr>
-              <th scope="row">Username:</th>
+              <th scope="row">Username</th>
                 <td> <a href="{{users.html_url}}" target="_blank">{{users.login}}</a></td>
 
             </tr>
