deletes errors in repo component html file

--- a/src/app/repository/repository.component.html
+++ b/src/app/repository/repository.component.html
@@ -8,9 +8,8 @@
 <div class="container">
     <div class="row">
       <div  class="col-md-12">
-        <h2 style="color: orange" >REPOSITORIES</h2>
-        <div class="table table-striped">
-            <table class="table table-dark table-hover">
+        <div class="table">
+            <table class="table">
               <tbody>
                   <tr *ngFor=" let repository of gitRepoRequest.searchRepo" >
                       <td>
