styles the search form

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -10,7 +10,7 @@
         <a class="nav-link" routerLink="/users" routerLinkActive="active"><span class="RD">users</span></a>
     </div>
     <div class="col-md-4">
-        <a class="nav-link" routerLink="/repository" routerLinkActive="active"><span class="RD">repositories</span></a>
+        <a class="nav-link" routerLink="/users" routerLinkActive="active"><span class="RD">repositories</span></a>
     </div>
 </div>
 <br/>
