--- a/src/app/search-form/search-form.component.html
+++ b/src/app/search-form/search-form.component.html
@@ -1,6 +1,5 @@
-<div class="container-fluid">
-  <div class ="jumbotron">
-  <div class="row">
+
+  <div id="mega" class="row">
       <form (ngSubmit)="searchFor(searchForm)" #searchForm="ngForm">
           <div class="form-group">
         <label for="name"></label>
@@ -9,6 +8,4 @@
       <button type="submit" class="btn btn-success btn-lg">Search</button>
     </form>
   </div>
-</div>
-</div>
 <br>
