--- a/src/app/search-form/search-form.component.css
+++ b/src/app/search-form/search-form.component.css
@@ -1,3 +1,5 @@
-.form-group {
-    text-align: center;
+#mega {
+    background-color: rgb(215, 238, 240);
+    padding: 20px;
+    width: 500px;
 }
